name:                mygame
version:             0.1.0.0
homepage:            https://github.com/3milesWind/CSE230_FinalProject/blob/main/README.md
license:             BSD3
license-file:        LICENSE
author:              Shanchuan
maintainer:          N/A
copyright:           2021 Shanchuan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable game
  hs-source-dirs:      src
  other-modules:       UI, MyGame, Level
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     
